# fdsvismap

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_fds_vismap_nb.ipynb  direct_steering.ipynb  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/: dependentbot.yml
.github/workflows/: code_quality.yml  docs-deploy.yml  tests.yml
docs/source/: conf.py  description.rst  fdsvismap.rst  index.rst  installation.rst
examples/minimal_examples/collision/fds_data/: model.fds
examples/room_fire/: benchmark_ray_casting.py  room_fire.py
examples/room_fire/fds_data/: model.fds  model.ini  model.out  model.pickle  model.sinfo  model.smv  model_1_1.s3d  model_1_1.s3d.sz  model_1_1.sf  model_1_1.sf.bnd  model_1_2.s3d  model_1_2.s3d.sz  model_1_2.sf  model_1_2.sf.bnd  model_1_3.s3d  model_1_3.s3d.sz  model_1_3.sf  model_1_3.sf.bnd  model_2_1.s3d  model_2_1.s3d.sz  model_2_1.sf  model_2_1.sf.bnd  model_2_2.s3d.sz  model_2_2.sf  model_2_2.sf.bnd  model_2_3.s3d  model_2_3.s3d.sz  model_2_3.sf  model_2_3.sf.bnd  model_3_1.s3d  model_3_1.s3d.sz  model_3_1.sf  model_3_1.sf.bnd  model_3_2.s3d.sz  model_3_2.sf  model_3_2.sf.bnd  model_3_3.s3d  model_3_3.s3d.sz  model_3_3.sf  model_3_3.sf.bnd  (+60 more)
fdsvismap/: FDSVIsMap.py  FDSVisMap.py  Waypoint.py  __init__.py  helper_functions.py
scripts/: ci.sh
tests/: test_vismap_example.py
