[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fdsvismap"
version = "0.2.1"
requires-python = ">=3.11"
description = "Tool for waypoint-based verification of visibility in the scope of performance-based fire safety assessment."
authors = [
    {name = "Kristian Börger", email =  "boerger@uni-wuppertal.de"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=2.1,<3.0",
    "matplotlib~=3.10,<4.0",
    "scikit-image ~= 0.23.2",
    "fdsreader ~= 1.11.5",
]

[project.optional-dependencies]
docs = [
    "sphinx >= 7.2.6",
    "sphinx-rtd-theme >= 2.0.0",
    "sphinx-copybutton",
]

[project.urls]
"Homepage" = "https://firedynamics.github.io/fdsvismap/"
"Documentation" = "https://firedynamics.github.io/fdsvismap/"
"Repository" = "https://github.com/FireDynamics/fdsvismap"
"Bug Tracker" = "https://github.com/FireDynamics/fdsvismap/issues"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "ruff>=0.14.3",
    "pytest>=8.4.2",
    "sphinx >= 7.2.6",
    "sphinx-rtd-theme >= 2.0.0",
    "sphinx-copybutton",
]
